kubernetes/tekton-resources/demo/gatekeeper-signing-checker-resources.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatekeeper-signing-checker-service
  namespace: gatekeeper
spec:
  selector:
    app: gatekeeper-signing-checker
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
