kubernetes/tekton-resources/demo/gatekeeper-constraints.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredSignatures
metadata:
  name: image-must-have-signature
  namespace: gatekeeper
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "prod"
  parameters:
    signatures: ["image"]
